client/src/client/testing/snapshots/blokli_client__client__testing__tests__query_service_registry_config_returns_current_configuration.snap
---
source: client/src/client/testing/mod.rs
expression: config
---
type_registration_fee: 1000 wxHOPR
node_safe_registry: "0x4444444444444444444444444444444444444444"
