client/src/client/testing/snapshots/blokli_client__client__testing__tests__query_service_types_returns_every_type_when_unfiltered.snap
---
source: client/src/client/testing/mod.rs
expression: types
---
- service_type: "gvpn:exit"
  owner: "0x4444"
  requirement: ~
  registration_burn: 1 wxHOPR
  update_burn: 0 wxHOPR
- service_type: "gvpn:relay"
  owner: ~
  requirement: ~
  registration_burn: 1 wxHOPR
  update_burn: 0 wxHOPR
