client/src/client/testing/snapshots/blokli_client__client__testing__tests__query_services_matches_a_service_type_written_as_its_ascii_name.snap
---
source: client/src/client/testing/mod.rs
expression: entries
---
- service_type: "gvpn:exit"
  node: "1111111111111111111111111111111111111111"
  safe: "3333333333333333333333333333333333333333"
  metadata: "0xdeadbeef"
  registered_at: "1700000000"
  updated_at: "1700000000"
