client/src/client/testing/snapshots/blokli_client__client__testing__tests__query_services_narrows_to_one_node.snap
---
source: client/src/client/testing/mod.rs
expression: entries
---
- service_type: "gvpn:relay"
  node: "2222222222222222222222222222222222222222"
  safe: "3333333333333333333333333333333333333333"
  metadata: "0xdeadbeef"
  registered_at: "1700000000"
  updated_at: "1700000000"
