client/src/client/testing/snapshots/blokli_client__client__testing__tests__subscribe_service_registry_config_reports_snapshot_then_update.snap
---
source: client/src/client/testing/mod.rs
assertion_line: 1691
expression: "vec![initial, updated]"
---
- type_registration_fee: 1 wxHOPR
  node_safe_registry: "0x1111111111111111111111111111111111111111"
- type_registration_fee: 2 wxHOPR
  node_safe_registry: "0x2222222222222222222222222222222222222222"
