client/src/client/testing/snapshots/blokli_client__client__testing__tests__subscribe_service_types_reports_one_event_per_changed_field.snap
---
source: client/src/client/testing/mod.rs
expression: updates
---
- kind: REGISTERED
  service_type: "gvpn:exit"
  config:
    service_type: "gvpn:exit"
    owner: "0x4444"
    requirement: ~
    registration_burn: 1 wxHOPR
    update_burn: 0 wxHOPR
  registry_config: ~
- kind: OWNER_CHANGED
  service_type: "gvpn:exit"
  config:
    service_type: "gvpn:exit"
    owner: ~
    requirement: ~
    registration_burn: 1 wxHOPR
    update_burn: 5 wei wxHOPR
  registry_config: ~
- kind: UPDATE_BURN_CHANGED
  service_type: "gvpn:exit"
  config:
    service_type: "gvpn:exit"
    owner: ~
    requirement: ~
    registration_burn: 1 wxHOPR
    update_burn: 5 wei wxHOPR
  registry_config: ~
