client/src/client/testing/snapshots/blokli_client__client__testing__tests__subscribe_services_reports_registration_update_and_deregistration.snap
---
source: client/src/client/testing/mod.rs
expression: updates
---
- kind: REGISTERED
  service_type: "gvpn:exit"
  node: "1111111111111111111111111111111111111111"
  entry:
    service_type: "gvpn:exit"
    node: "1111111111111111111111111111111111111111"
    safe: "3333333333333333333333333333333333333333"
    metadata: "0xdeadbeef"
    registered_at: "1700000000"
    updated_at: "1700000000"
- kind: UPDATED
  service_type: "gvpn:exit"
  node: "1111111111111111111111111111111111111111"
  entry:
    service_type: "gvpn:exit"
    node: "1111111111111111111111111111111111111111"
    safe: "3333333333333333333333333333333333333333"
    metadata: "0xc0ffee"
    registered_at: "1700000000"
    updated_at: "1700000100"
- kind: DEREGISTERED
  service_type: "gvpn:exit"
  node: "1111111111111111111111111111111111111111"
  entry: ~
